--- a/peng-log/pom.xml
+++ b/peng-log/pom.xml
@@ -3,13 +3,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kit</artifactId>
+        <artifactId>peng-common-parent</artifactId>
         <groupId>com.peng</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../peng-common-parent</relativePath>
+        <version>0.0.1-RELEASE</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>peng-log</artifactId>
+    <version>0.0.1-RELEASE</version>
+    <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.peng</groupId>
+            <artifactId>peng-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.peng</groupId>
+            <artifactId>peng-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
