--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>peng-log</module>
         <module>peng-common-parent</module>
         <module>peng-common</module>
+        <module>peng-exception</module>
     </modules>
     <packaging>pom</packaging>
     <name>peng</name>
