--- a/peng-web/pom.xml
+++ b/peng-web/pom.xml
@@ -3,13 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kit</artifactId>
+        <artifactId>peng-common-parent</artifactId>
         <groupId>com.peng</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../peng-common-parent</relativePath>
+        <version>0.0.1-RELEASE</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>peng-exception</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>peng-web</artifactId>
+    <version>0.0.1-RELEASE</version>
+    <packaging>jar</packaging>
 
 
 </project>
