web包，跨域、全局异常

--- a/peng-web/pom.xml
+++ b/peng-web/pom.xml
@@ -14,5 +14,18 @@
     <version>0.0.1-RELEASE</version>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.peng</groupId>
+            <artifactId>peng-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.peng</groupId>
+            <artifactId>peng-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
