web包异常处理：完成基本功，待完成---两个异常处理handler

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
                 <artifactId>peng-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.peng</groupId>
+                <artifactId>peng-web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
