--- a/peng-log/pom.xml
+++ b/peng-log/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>peng-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 
